syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.socialscore.client.api.proto";

message SocialScoreParams {
  string first_name = 1;
  string last_name = 2;
  int32 age = 3;
  double seed = 4;
}
